[package]
name = "rustls-ring"
version = "0.1.0-dev.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR ISC OR MIT"
description = "A *ring*-based crypto provider for rustls."
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false

[features]
default = ["std"]
std = ["rustls/std"]

[dependencies]
pki-types = { workspace = true }
rustls = { path = "../rustls", default-features = false }
ring = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
bencher = { workspace = true }
rustls-test = { workspace = true, default-features = false }

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[lints]
workspace = true
