[package]
name = "rustls-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
aws-lc-rs = ["dep:rustls-aws-lc-rs"]
brotli = ["rustls/brotli"]
fips = ["rustls-aws-lc-rs/fips"]
log = ["rustls/log"]
ring = ["dep:rustls-ring"]
zlib = ["rustls/zlib"]

[dependencies]
rustls = { path = "../rustls", default-features = false, features = ["std"] }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs", features = ["std"], optional = true }
rustls-ring = { path = "../rustls-ring", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
pki-types = { workspace = true }
x509-parser = { workspace = true }
webpki = { workspace = true }

[lints]
workspace = true
