[package]
name = "rustls-util"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0 OR ISC OR MIT"
description = "Utilities for use with rustls"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"

[features]
default = ["tracing"]
tracing = ["dep:tracing", "rustls/tracing"]

[dependencies]
rustls = { path = "../rustls", version = "0.24.0-dev.0", default-features = false }
tracing = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
